Made java 8 compatible